--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "caglaSipahiYucel",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "mongoose": "^6.2.1"
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.3",
+    "uuidv4": "^6.2.12"
   }
 }
